<resources>
    <string name="app_name">Find An Instructor</string>
    <string name="name">Name</string>
    <string name="more">Details</string>
    <string name="avatar">Avatar</string>
    <string name="map">Map</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search">search by city</string>
    <string name="send">Send an Email</string>
    <string name="city">City</string>
    <string name="phone">Phone number</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="to">To:</string>
    <string name="subjectEmail">Subject:</string>
    <string name="message">Message:</string>
    <string name="sendEmail">Send</string>
    <string name="instructorsList">View the Instructors List</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="to_send">"to "</string>
    <string name="ok">yes</string>
    <string name="no">No</string>
    <string name="add">Add instructor</string>
    <string name="longitude">Longitude</string>
    <string name="add_long">Add Longitude</string>
    <string name="Latitude">Add Latitude</string>
    <string name="add_lat">Add Latitude</string>
    <string name="url">Add Image URL</string>
    <string name="add_url">Add an image url</string>
    <string name="image_url">image url</string>
    <string name="instructorName">Instructor Name :</string>
    <string name="subjectTeaching">Subject teaching :</string>
    <string name="cancel">Cancel</string>
</resources>