<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/instructor_avatar_row"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:radius="24dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/avatar"
        android:gravity="center"
        android:autofillHints="name"
        android:text="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/instructor_name_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/instructor_name_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/instructor_avatar_row"
        app:layout_constraintEnd_toStartOf="@id/more_info"
        app:layout_constraintBottom_toBottomOf="parent" />



    <Button
        android:id="@+id/more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/instructor_name_row"
        app:layout_constraintTop_toTopOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    xmlns:mapbox="http://schemas.android.com/tools"-->
    <!--    >-->

    <!--    <SearchView-->
    <!--        android:id="@+id/search_view"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="100dp"-->
    <!--        android:background="@color/LightGreen"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->


    <!--        />-->

    <!--    <com.mapbox.maps.MapView-->
    <!--        android:id="@+id/mapView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="500dp"-->
    <!--        mapbox:mapbox_cameraTargetLat="29"-->
    <!--        mapbox:mapbox_cameraTargetLng="47.477197"-->
    <!--        mapbox:mapbox_cameraZoom="1.0"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/instructor_list"-->

    <!--        />-->

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/focusLocation"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:src="@drawable/baseline_my_location_24"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/guideline"-->
    <!--        android:contentDescription="@string/map" />-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/instructor_list"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/mapView"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintGuide_percent="0.6853625" />-->


    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->